from common.domain.enums import StrEnum


class SystemRole(StrEnum):
    ADMIN = "admin"
    COORDINATOR = "coordinator"
    VOLUNTEER = "volunteer"
