from common.domain.enums import StrEnum


class NotificationChannel(StrEnum):
    IN_APP = "in_app"
    EMAIL = "email"
